# tree-sitter-repro

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-repro.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_repro/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRepro/: repro.h
bindings/swift/TreeSitterReproTests/: TreeSitterReproTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: simple_func.txt
test/highlight/: simple_func.repro
